k8s/apps/overlays/dev/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mountain-blog
  namespace: app
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: mountain-blog
          image: ghcr.io/example/mountain-blog-project-blueprint:main
