k8s/apps/overlays/dev/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mountain-blog
  namespace: app
spec:
  rules:
    - host: mountain-blog-dev.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mountain-blog
                port:
                  name: http
